edit response to get times
