# internal/use_cases/schedules/get_times/type.go
@@ -3,5 +3,10 @@ package get_times
 import "time"
 
 type response struct {
-	Datetimes []time.Time `json:"datetimes" example:"0001-01-01T00:00:00Z"`
+	Datetimes []times `json:"datetimes"`
+}
+
+type times struct {
+	Datetime    time.Time `json:"datetime" example:"0001-01-01T00:00:00Z"`
+	IsAvailable bool      `json:"is_available" example:"true"`
 }
